# code_backtrack_project_2026

./: PLANNING.md  pyproject.toml
src/backspace_tracker/: __init__.py  __main__.py  activewindow.py  app.py  counter.py  listener.py  reporter.py
src/code_backtrack/: __main__.py  counter.py  reporter.py  tray.py
tests/: test_activewindow.py  test_app.py  test_classifier.py  test_cli.py  test_counter.py  test_reporter.py
